# abstracting-definitional-interpreters

./: .gitignore  .travis.yml  Makefile  README.md  aval-set-unit.rkt  aval-set.rkt  bind-sig.rkt  delta-sig.rkt  delta-unit.rkt  env-box-unit.rkt  env-sig.rkt  env-sto-unit.rkt  env-unit.rkt  err-sto.rkt  err-unit.rkt  ev-bang-unit.rkt  ev-monad-sig.rkt  ev-sig.rkt  ev-symbolic-unit.rkt  ev-unit.rkt  eval-bang.rkt  eval-box.rkt  eval-explicit-unit.rkt  eval-explicit.rkt  eval-implicit-unit.rkt  eval-implicit.rkt  eval-pure-explicit-unit.rkt  eval-pure-explicit.rkt  eval-pure-unit.rkt  eval-pure.rkt  eval-set-unit.rkt  eval-set.rkt  eval-sig.rkt  eval-sto-unit.rkt  eval-trace-unit.rkt  eval-trace.rkt  eval.rkt  fail-sig.rkt  id-monad-unit.rkt  index.html  (+26 more)
eval-trace/: lang.rkt
evals/: eval-box.rkt  eval-dead.rkt  eval-pure.rkt  eval-set.rkt  eval-trace.rkt
evs/: ev-cache.rkt  ev-debug.rkt
examples/: eg1.rkt  eg3.rkt  eg4.rkt  eg5.rkt  eg6.rkt  reach-ex0.rkt
fixed/: eval-nd.rkt  eval-symbolic.rkt
haskell/: .exrc  AAI.hs  Analyses.hs  Classes.hs  Fixpoints.hs  Lang.hs  Main.hs  Makefile  Monads.hs  PrettyUtil.hs  README.txt  SExpKit.hs  StateSpace.hs  Transformers.hs  Util.hs  monadic-eval.cabal
haskell/AAI/: Addressable.hs
haskell/Analyses/: AbstractM.hs  BigStep.hs  Executable.hs  SmallStep.hs  ZPDCFA.hs
haskell/Analyses/BigStep/: AbstractT.hs  AnalysisT.hs  ConcreteT.hs  WideningT.hs  ZPDCFAT.hs
haskell/Analyses/SmallStep/: AbstractT.hs  AnalysisT.hs  ConcreteT.hs  ZPDCFAT.hs
haskell/Classes/: Addressable.hs  Lattice.hs  MonadEnv.hs  MonadStore.hs  MonadTime.hs  Pointed.hs  Promote.hs  TimeLike.hs
haskell/Fixpoints/: DeadCode.hs  DeadMemoEval.hs  Iter.hs  Kleene.hs  Memo.hs  MemoEval.hs  Y.hs  YEval.hs
haskell/Lang/: Lambda.hs  SymbolicLambda.hs
haskell/Lang/Lambda/: AST.hs  Analysis.hs  BigStep.hs  CPS.hs  Data.hs  Examples.hs  Parsing.hs  Printing.hs  SmallStep.hs
haskell/Lang/Lambda/BigStep/: Abstract.hs  Concrete.hs  Symbolic.hs
haskell/Lang/Lambda/SmallStep/: Abstract.hs  Concrete.hs  Symbolic.hs
haskell/Monads/: Classes.hs  Transformers.hs
haskell/Monads/Classes/: MonadEnv.hs  MonadEnvReader.hs  MonadEnvState.hs  MonadReader.hs  MonadState.hs  MonadStore.hs  MonadStoreState.hs  MonadTime.hs  MonadTimeState.hs  Promote.hs
haskell/Monads/Transformers/: DiscreteT.hs  EnvMonadT.hs  EnvReaderT.hs  EnvStateT.hs  ExtTBT.hs  ListSetT.hs  NonDetT.hs  ReaderT.hs  StateT.hs  StoreMonadT.hs  StoreStateT.hs  TimeMonadT.hs  TimeStateT.hs
haskell/SExpKit/: Data.hs  Parser.hs  Test.hs
haskell/StateSpace/: CFA.hs  Concrete.hs  Env.hs  Semantics.hs  Store.hs  Time.hs
haskell/Transformers/: EnvMonadT.hs  NonDetT.hs  StoreMonadT.hs  TimeMonadT.hs
haskell/Util/: ExtTB.hs  Lattice.hs  Lens.hs  ListSet.hs  MFunctor.hs  Map.hs  MonadFunctor.hs  Pointed.hs  Set.hs
lang/: reader.rkt
metafuns/: alloc-0cfa.rkt  alloc-x.rkt  state-crush.rkt  state.rkt
monad/: monad-by-hand.rkt
monadic-eval/: Makefile  (+10 more)
(+592 files in other folders)
