name:                monadic-eval
version:             0.1.0.0
license:             AllRightsReserved
author:              David Darais, David Van Horn, Phillip Mates
maintainer:          david.darais@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Main
                     , AAI
                     , Fixpoints
                     , Lang
                     , StateSpace
                     , Util

  other-modules:       AAI.Addressable
                     , Fixpoints.MemoEval
                     , Fixpoints.YEval
                     , Lang.Lambda
                     , Lang.SymbolicLambda
                     , Monads.Classes.MonadEnv
                     , Monads.Classes.MonadStore
                     , Monads.Classes.MonadTime
                     , Monads.Classes.Promote
                     , Monads.Transformers.EnvMonadT
                     , Monads.Transformers.NonDetT
                     , Monads.Transformers.StoreMonadT
                     , Monads.Transformers.TimeMonadT
                     , StateSpace.Env
                     , StateSpace.Store
                     , StateSpace.Time
                     , Util.Lattice
                     , Util.Lens
                     , Util.Pointed

  build-depends:       base ==4.6.*
                     , containers ==0.5.*
                     , mtl ==2.1.*
