name:                monadic-eval
version:             0.1.0.0
license:             AllRightsReserved
author:              David Darais, David Van Horn, Phillip Mates
maintainer:          david.darais@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Main

  other-modules:
  build-depends:       base == 4.6.*
                     , containers == 0.5.*
                     , mtl == 2.1.*
                     , ansi-wl-pprint == 0.6.*
                     , template-haskell == 2.8.*
                     , parsec == 3.1.*
