name:                monadic-eval
version:             0.1.0.0
license:             AllRightsReserved
author:              David Darais, David Van Horn, Phillip Mates
maintainer:          david.darais@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Main

  other-modules:
  build-depends:       base == 4.6.*
                     , containers == 0.5.*
                     , mtl == 2.1.*
                     , template-haskell == 2.8.*
                     , parsec == 3.1.*
                     , sexp-kit == 0.1.*
                     , mpretty == 0.1.*
                     , text == 0.11.*
                     , orders == 0.1.*
                     , ansi-terminal == 0.6.*
